Removed hibernate3.jar underscore patch and replaced it with original version.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@193608 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/hibernate/src/README
+++ b/LGPL/Tools/hibernate/src/README
@@ -21,4 +21,4 @@ hibernate-commons-annotations.jar - ACS/LGPL/Tools/extjars (added for Hibernate 
 
 ==============
 
-Since hibernate is very hard to build (bugs in the build system, builds only when using Java 1.5), a build from the sources is not made. hibernate3.jar is patched version of the original JAR. Incoporated patch is "hibernateUnderscore.patch".
+Since hibernate is very hard to build (bugs in the build system, builds only when using Java 1.5), a build from the sources is not made.
