Updated for SVN instead of CVS
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@227039 523d945c-050c-4681-91ec-863ad3bb968a

--- a/README
+++ b/README
@@ -1,12 +1,10 @@
 #*******************************************************************************
 # E.S.O. - ACS project
 #
-# "@(#) $Id: README,v 1.2 2006/05/04 15:43:08 gchiozzi Exp $"
-#
-#  ACS CVS Archive README  
+#  ACS SVN Archive README  
 #
 #  This file describes the basic contents of the 
-#  ACS CVS Archive
+#  ACS SVN Archive
 # 
 #*******************************************************************************
 
